--- a/style/style.less
+++ b/style/style.less
@@ -1,33 +1,86 @@
 @import "variables";
 
-#game{
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body{
 	display:flex;
 	justify-content:center;
+	align-items:flex-start;
 }
 
-.row {
-	display:flex;
-	width:100%;
+.border-rise-up-effect{
+	border-top-color:#FFF;
+	border-left-color:#FFF;
+	border-bottom-color:#7B7B7B;
+	border-right-color: #7B7B7B;
 }
 
-.square {
-	padding:3px;
-	width:15px;
-	height:15px;
-	text-align:center;
+.border-sink-down-effect {
+	border-top-color:#7B7B7B;
+	border-left-color:#7B7B7B;
+	border-bottom-color:#FFF;
+	border-right-color: #FFF;
+}
+
+
+#game {
+	background-color:#BDBDBD;
+	border:2px solid;
+	padding:6px;
+	.border-rise-up-effect;
 	
-	border:1px solid #000;
-	background-color:#DDD;
 	
-	&.mine {
-		background: #C10000;
-	}
-	
-	&.open {
-		background-color:#FFF;
-	}
-	
-	&.flag {
-		background:#f9f214;
+	#field {
+		border:2px solid #FFF;
+		.border-sink-down-effect;
+		
+		.row {
+			display:flex;
+			width:100%;
+		}
+
+		.square {
+			width:16px;
+			height:16px;
+			font-size:12px;
+			font-family:Courier;
+			font-weight:bold;
+			text-align:center;
+			background-color:#BDBDBD;
+
+			border:2px solid;
+			.border-rise-up-effect;
+
+			&.mine {
+				background: #C10000;
+			}
+
+			&.open {
+				background-color:#BDBDBD;
+				border:0;
+				border-style:solid;
+				border-color:#7B7B7B;
+				border-bottom-width:1px;
+				border-right-width:1px;	
+			}
+
+			&.flag {
+				background:#f9f214;
+			}
+			
+			&.open-1 { color: #00F; }
+			&.open-2 { color: #007B00; }
+			&.open-3 { color: #F00; }
+			&.open-4 { color: #A50021; }
+			&.open-5 { color: #00F; }
+			&.open-6 { color: #007B00; }
+			&.open-7 { color: #F00; }
+			&.open-8 { color: #A50021; }
+		}
 	}
 }
