--- a/style/style.less
+++ b/style/style.less
@@ -1,5 +1,6 @@
 @import "variables";
 
+
 html {
   box-sizing: border-box;
 }
@@ -14,21 +15,21 @@ body{
 }
 
 .border-rise-up-effect{
-	border-top-color:#FFF;
-	border-left-color:#FFF;
-	border-bottom-color:#7B7B7B;
-	border-right-color: #7B7B7B;
+	border-top-color:@border-color-1;
+	border-left-color:@border-color-1;
+	border-bottom-color:@border-color-2;
+	border-right-color:@border-color-2;
 }
 
 .border-sink-down-effect {
-	border-top-color:#7B7B7B;
-	border-left-color:#7B7B7B;
-	border-bottom-color:#FFF;
-	border-right-color: #FFF;
+	border-top-color:@border-color-2;
+	border-left-color:@border-color-2;
+	border-bottom-color:@border-color-1;
+	border-right-color:@border-color-1;
 }
 
 #game {
-	background-color:#BDBDBD;
+	background-color:@base-color;
 	border:2px solid;
 	padding:6px;
 	.border-rise-up-effect;
@@ -58,7 +59,6 @@ body{
 			font-family:Courier;
 			font-weight:bold;
 			text-align:center;
-			background-color:#BDBDBD;
 
 			border:2px solid;
 			.border-rise-up-effect;
@@ -69,7 +69,7 @@ body{
 			}
 
 			&.open {
-				background-color:#BDBDBD;
+				background-color:none;
 				border:0;
 				border-style:solid;
 				border-color:#7B7B7B;
