--- a/style/options.less
+++ b/style/options.less
@@ -19,7 +19,8 @@
         padding:10px;
         position: absolute;
         top: 20px;
-        right: 50%;
+        width:300px;
+        right: ~"calc(50% - 150px)";
         background-color: white;
         border: 2px solid #000;    
     }
