Refactored Field and minefieldController to component setup

--- a/style/dark-theme.less
+++ b/style/dark-theme.less
@@ -28,7 +28,7 @@ color: #3A3333;
 	    background-color:@dark-theme-base-color;
         .dark-theme-border-rise-up-effect;
         
-        #field {
+        ms-field {
 		    border:2px solid #FFF;
             .dark-theme-border-sink-down-effect;
             
