--- a/style/style.less
+++ b/style/style.less
@@ -33,9 +33,14 @@ body{
 			width:100%;
 		}
 
+		square {
+			display:block;
+		}
+
 		.square {
 			width:16px;
 			height:16px;
+			padding-top: 2px;
 			font-size:12px;
 			font-family:Courier;
 			font-weight:bold;
