--- a/style/style.less
+++ b/style/style.less
@@ -14,6 +14,10 @@ body{
 	align-items:flex-start;
 }
 
+ms-game{
+	position:relative;
+}
+
 #game {
 	background-color:@base-color;
 	border:2px solid;
@@ -75,6 +79,29 @@ body{
 			&.open-6 { color: #007B00; }
 			&.open-7 { color: #F00; }
 			&.open-8 { color: #A50021; }
+		}
+	}
+}
+
+#game .victory-popup {
+	position: absolute;
+	top: 30%;
+    left: 2px;
+    right: 0px;
+	text-align:center;
+    background-color: green;
+    color: white;
+    padding: 20px 0;
+
+	button{
+		background-color:transparent;
+		border:0;
+		text-decoration: underline;
+		color:#fff;
+		cursor: pointer;
+
+		&:hover{
+			text-decoration: none;
 		}
 	}
 }
