Implemented close button for settings dialog

--- a/style/style.less
+++ b/style/style.less
@@ -70,6 +70,10 @@ ms-game{
 			&.flag {
 				background:#f9f214;
 			}
+
+			&.flag.flag-wrong {
+				border-color:#C10000;
+			}
 			
 			&.open-1 { color: #00F; }
 			&.open-2 { color: #007B00; }
