--- a/style/options.less
+++ b/style/options.less
@@ -25,9 +25,29 @@
         border: 2px solid #000;    
     }
     
-    .dialog button {
+    .dialog button.cmd-apply {
         float:right;
+        cursor:pointer;
     }
+
+    .dialog button.cmd-close {
+        position:absolute;
+        font-weight: bold;
+        top:0;
+        right:0;
+        width:40px;
+        height:40px;
+        background-color:transparent;
+        border:0;
+        cursor:pointer;
+        border-radius:100%;
+
+        &:hover{
+            background-color:#e1e1e1;
+        }
+    }
+
+
     
     .dialog input {
         width:40px;   
