--- a/style/main-menu.less
+++ b/style/main-menu.less
@@ -14,4 +14,9 @@
 		background-color: @base-color;
 		.border-rise-up-effect;
 	}
+
+	div.too-many-flags{
+		color:red;
+		text-decoration: underline;
+	}
 }
