Fixed styling on victory screen

--- a/style/style.less
+++ b/style/style.less
@@ -97,6 +97,10 @@ ms-game{
     color: white;
     padding: 20px 0;
 
+	b {
+		display:block;
+	}
+
 	button{
 		background-color:transparent;
 		border:0;
