- Added less as css preprocessor - transferred styles for ms-game component to component specific file - moved variable files to 'styles' folder, and added them to angular-cli settings, so they can be included in other files - moved global styles to 'global-styles.less' file and included it into angular-cli settings

--- a/src/app/ms-game/ms-game.component.less
+++ b/src/app/ms-game/ms-game.component.less
@@ -1,3 +1,6 @@
+@import "variables";
+@import "3d";
+
 #game {
 	background-color:@base-color;
 	border:2px solid;
@@ -5,7 +8,6 @@
 	padding-top:0;
 	.border-rise-up-effect;
 }
-
 
 .victory-popup {
 	position: absolute;
@@ -31,5 +33,25 @@
 		&:hover{
 			text-decoration: none;
 		}
+	}
+}
+
+#main-menu {
+	display:flex;
+	justify-content: space-between;
+	align-items:center;
+	margin:6px 0;
+	padding:2px;
+	border:2px solid;
+	.border-sink-down-effect;
+
+	button { 
+		background-color: @base-color;
+		.border-rise-up-effect;
+	}
+
+	div.too-many-flags{
+		color:red;
+		text-decoration: underline;
 	}
 }
