--- a/src/app/field/field.component.html
+++ b/src/app/field/field.component.html
@@ -1,3 +1,6 @@
 <div class="row" *ngFor="let row of field">
-  <!-- <ms-square model="square" ng-repeat="square in row track by $index" /> -->
+    <ms-square 
+        *ngFor="let square of row"
+        [square]="square">
+    </ms-square>
 </div>
