--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -8,7 +8,7 @@
                 new
             </button>
         </div>
-        <!-- <ms-field></ms-field> -->
+        <ms-field></ms-field>
         <div class="victory-popup" *ngIf="isVictorious()">
             <b>You beat the game!</b>
             <button (click)="newGame()">play again?</button>
