--- a/src/app/square/square.component.html
+++ b/src/app/square/square.component.html
@@ -1,8 +1,5 @@
-<div (click)="reveal(0, 0)"
-
-     [class]="'square' + determineClass(0, 0)">
-    {{ 0 }}
+<div [class]="'square ' + determineClass(squareIndex, rowIndex)"
+     (click)="reveal(squareIndex, rowIndex)"
+     (contextmenu)="plantFlag(squareIndex, rowIndex); false">
+    {{ displayText(squareIndex, rowIndex) }}
 </div>
-<!-- displayText(0, 0) -->
-<!--ms-right-click="ctrl.plantFlag($index, $parent.$index)"-->
-<!-- data-squarevalue="{{ square.value }}" -->
