rewrote m-game-options component to Angular2/TypeScript

--- a/src/app/field/field.component.html
+++ b/src/app/field/field.component.html
@@ -1,7 +1,9 @@
-<div class="row" *ngFor="let row of field; let rowIndex = index">
-    <ms-square 
-        *ngFor="let square of row; let squareIndex = index"
-        [rowIndex]="rowIndex"
-        [squareIndex]="squareIndex">
-    </ms-square>
+<div class="field">
+    <div class="row" *ngFor="let row of field; let rowIndex = index">
+        <ms-square 
+            *ngFor="let square of row; let squareIndex = index"
+            [rowIndex]="rowIndex"
+            [squareIndex]="squareIndex">
+        </ms-square>
+    </div>
 </div>
