--- a/src/app/field/field.component.less
+++ b/src/app/field/field.component.less
@@ -1,3 +1,11 @@
+@import "3d";
+
+.field {
+    display:block;
+    border:2px solid #FFF;
+    .border-sink-down-effect;
+}
+
 .row {
     display:flex;
     width:100%;
