--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -14,5 +14,5 @@
             <button (click)="newGame()">play again?</button>
         </div>
     </div>
-    <!--<div ms-game-options id="options"></div>-->
+    <ms-game-options></ms-game-options>
 </div>	
