--- a/src/app/square/square.component.less
+++ b/src/app/square/square.component.less
@@ -1,13 +1,15 @@
 @import "3d";
 
 .square {
-    width:16px;
-    height:16px;
-    padding-top: 2px;
-    font-size:12px;
-    font-family:Courier;
-    font-weight:bold;
-    text-align:center;
+    width: 16px;
+    height: 16px;
+    padding: 2px 0 0 0;
+    font-size: 12px;
+    font-family: Courier;
+    font-weight: bold;
+    text-align: center;
+    background-color: transparent;
+    display: block;
 
     border:2px solid;
     .border-rise-up-effect;
