Added keyboard support for: Moving with arrow keys, planting flag with spacebar

--- a/src/app/square/square.component.html
+++ b/src/app/square/square.component.html
@@ -1,5 +1,6 @@
 <button [class]="'square ' + determineClass()"
      (click)="reveal()"
-     (contextmenu)="plantFlag(); false">
+     (contextmenu)="plantFlag(); false"
+     (keydown)="handleArrowKeys($event)">
     {{ displayText() }}
 </button>
