--- a/src/app/game/game.component.less
+++ b/src/app/game/game.component.less
@@ -50,8 +50,12 @@
 		.border-rise-up-effect;
 	}
 
-	div.too-many-flags{
-		color:red;
-		text-decoration: underline;
-	}
+    #flags-left, #timer {
+        font-weight: bold;
+        font-size:17px;
+        background-color: #333;
+        color: red;
+        width: 30px;
+        text-align: right;
+    }
 }
