--- a/src/styles/global-styles.less
+++ b/src/styles/global-styles.less
@@ -6,7 +6,8 @@ html {
     box-sizing: inherit;
 }
 
-body{
+body {
+    font-family: Courier;
     display:flex;
     justify-content:center;
     align-items:flex-start;
