Added smileys to button, styled timer and minesleft boxes

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -4,9 +4,7 @@
             <div id="flags-left" [class.too-many-flags]="minesLeft() < 0">
                 {{ minesLeft() }}
             </div>
-            <button (click)="newGame()">
-                new
-            </button>
+            <button (click)="newGame()" [ngClass]="buttonState()"></button>
             <div id="timer">
                 {{ timer() }}
             </div>
