--- a/src/app/square/square.component.html
+++ b/src/app/square/square.component.html
@@ -1,6 +1,8 @@
 <button [class]="'square ' + determineClass()"
      (click)="reveal()"
      (contextmenu)="plantFlag(); false"
-     (keydown)="handleArrowKeys($event)">
+     (keydown)="handleArrowKeys($event)"
+     (mousedown)="handleMouseDown()"
+     (mouseup)="handleMouseUp()">
     {{ displayText() }}
 </button>
