--- a/src/app/square/square.component.less
+++ b/src/app/square/square.component.less
@@ -5,6 +5,7 @@
     height: 16px;
     padding: 2px 0 0 0;
     font-size: 12px;
+    font-family: Courier;
     font-weight: bold;
     text-align: center;
     background-color: transparent;
