--- a/src/app/game-options/game-options.component.less
+++ b/src/app/game-options/game-options.component.less
@@ -16,13 +16,32 @@
     }
     
     .dialog {
-        padding:10px;
+        box-shadow: 0 11px 15px -7px rgba(0,0,0,.2), 0 24px 38px 3px rgba(0,0,0,.14), 0 9px 46px 8px rgba(0,0,0,.12);
+        display: block;
+        padding: 24px;
+        border-radius: 2px;
+        box-sizing: border-box;
+        overflow: auto;
+        outline: 0;
+        padding: 10px;
         position: absolute;
         top: 20px;
-        width:300px;
-        right: ~"calc(50% - 150px)";
-        background-color: white;
-        border: 2px solid #000;    
+        left:~'calc(50% - 150px)';
+        width: 300px;
+        right: calc(50% - 150px);
+        background-color: white; 
+        z-index:1002;
+    }
+
+    .backdrop {
+        z-index:1001;
+        background: rgba(0,0,0,.6);
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        -webkit-tap-highlight-color: transparent;
     }
     
     .dialog button.cmd-apply {
