--- a/src/app/game-options/game-options.component.html
+++ b/src/app/game-options/game-options.component.html
@@ -62,9 +62,7 @@
                 }
             </table>
 
-            <button class="cmd-apply" (click)="newGame()">
-            Apply
-            </button>
+            <button class="cmd-apply" (click)="newGame()">Apply</button>
         </div>
     }
 </div>
