--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -4,7 +4,7 @@
             <div id="flags-left">
                 {{ minesLeft() }}
             </div>
-            <button (click)="newGame()" [ngClass]="buttonState()"></button>
+            <button (click)="newGame()" [class]="buttonState()"></button>
             <div id="timer">
                 {{ timer() }}
             </div>
@@ -12,4 +12,4 @@
         <ms-field></ms-field>
     </div>
     <ms-game-options></ms-game-options>
-</div>	
+</div>
