--- a/src/app/square/square.component.html
+++ b/src/app/square/square.component.html
@@ -2,7 +2,7 @@
      (click)="reveal()"
      (contextmenu)="plantFlag(); false"
      (keydown)="handleArrowKeys($event)"
-     (mousedown)="handleMouseDown($event)"
-     (mouseup)="handleMouseUp($event)">
+     (mousedown)="handleMouseDown()"
+     (mouseup)="handleMouseUp()">
     {{ displayText() }}
 </button>
